# llm_benchmark

./: .gitignore
benchmark/: README.md  env.example  instructions.md  pyproject.toml  requirements.txt
benchmark/config/: models.json  models_config.json  pricing.csv  prompts.json
benchmark/config/prompts/: grouping_risk.txt  tprm.txt
benchmark/outputs/20251126_102408/: answers_Claude-3-Haiku.json  answers_Claude-3-Sonnet.json  results.csv
benchmark/outputs/20251126_103410/: results_overall.csv
benchmark/outputs/20251126_103410/cloud_computing/: answers_Claude-3-Haiku.json  answers_Claude-3-Sonnet.json  prompt_results.csv
benchmark/outputs/20251126_103410/data_science/: answers_Claude-3-Haiku.json  answers_Claude-3-Sonnet.json  prompt_info.json  prompt_results.csv
benchmark/outputs/20251126_103410/software_architecture/: answers_Claude-3-Haiku.json  answers_Claude-3-Sonnet.json  prompt_results.csv
benchmark/outputs/20251126_104315/: results_overall.csv
benchmark/outputs/20251126_104315/cloud_computing/: answers_Claude-3-Haiku.json  answers_Claude-3-Sonnet.json  prompt_results.csv
benchmark/outputs/20251126_104315/data_science/: answers_Claude-3-Haiku.json  answers_Claude-3-Sonnet.json  prompt_results.csv
benchmark/outputs/20251126_104315/software_architecture/: answers_Claude-3-Haiku.json  answers_Claude-3-Sonnet.json  prompt_info.json  prompt_results.csv
benchmark/outputs/20251126_104643/: results_overall.csv
benchmark/outputs/20251126_105330/: results_overall.csv
benchmark/src/benchmark/: bedrock_client.py  benchmarker.py  main.py  utils.py
(+20 files in other folders)
