[project]
name = "aws-bedrock-benchmark"
version = "0.1.0"
description = "A comprehensive benchmarking framework for testing AWS Bedrock LLMs"
requires-python = ">=3.8"
dependencies = [
    "boto3>=1.34.0",
    "aiofiles>=23.0.0",
    "pandas>=2.0.0",
    "click>=8.0.0",
]

[project.scripts]
benchmark = "benchmark.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/benchmark"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]